# creme-server

./: .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  creme_ai  pyproject.toml
.github/workflows/: github-to-gitlab.yml
apps/analysis/: admin.py  apps.py  choices.py  models.py  serializers.py  urls.py  views.py
apps/core/: helper.py  models.py
apps/core/management/commands/: initdata.py
apps/dogs/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/questions/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/users/: admin.py  authentication.py  models.py  serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py
config/: urls.py
config/locale/ko/LC_MESSAGES/: django.mo  django.po
config/settings/: base.py  local.py
data/: 2_questionchoice.json  3_dogemotion.json  4_dogkeyword.json  5_userkeyword.json  6_need.json  README.md  dogemotion.json  question.json  questionchoice.json
scripts/: clear_migrations.sh  db_init.sh
