[tool.poetry]
authors = ["Yeonggwang <immutable000@gmail.com>"]
description = "creme backend project"
name = "creme-server"
version = "0.0.1"

[tool.poetry.dependencies]
Django = "4.0.2"
djangorestframework = "3.13.1"
gunicorn = "20.1.0"
python = "^3.8"
Pillow = "^9.0.1" 
drf-yasg = "^1.20.0"

[tool.poetry.dev-dependencies]
flake8 = "4.0.1"
isort = "5.10.1"
black = "21.12b0"
django-silk = "4.2.0"
pre-commit = "2.17.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

# isort
[tool.isort]
include_trailing_comma = true
line_length = 88
profile = "black"
skip_glob = "**/migrations/*.py"
use_parentheses = false

# black
[tool.black]
extend-exclude = '''
     migrations
'''
include = '\.pyi?$'
line-length = 88
